<resources>
    <string name="app_name">صلاة المسلمين</string>
    <string name="appwidget_text">UPCOMING PRAYER</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="come_to_success"><b>"Come To The Success"</b></string>
    <string name="splash_screen_background">Splash Screen Background</string>
    <string name="noConnection">No Connection</string>
    <string name="noFavs">No favorites</string>
    <string name="no">No</string>
    <string name="notification">Notification</string>
    <string name="off">Off</string>
    <string name="gmt">GMT%s</string>
    <string name="ok">OK</string>
    <string name="oldAddCity">Use manuel City Chooser</string>
    <string name="ongoingIcon">Notification-Icon</string>
    <string name="ongoingNotification">Notification-Widget</string>
    <string name="other">Other</string>
    <string name="permissionCalendarText">If you want, that the Holy Days appear in your Phone Calendar, you have to allow Calendar Access. Otherwise do not.</string>
    <string name="permissionCalendarTitle">Calendar Berechtigung</string>
    <string name="permissionCameraText">To use 3D-Compass, you need to allow Camera access. Otherwise you will only be able to use the 2D-Compass.</string>
    <string name="permissionCameraTitle">Camera Permission</string>
    <string name="permissionLocationText">Location Permission is needed, to find your City. If you don\'t allow this App, to access your Location, you have to search for your City manually.</string>
    <string name="permissionLocationTitle">Location Permission</string>
    <string name="permissionStorageText">Storage Permission is needed. Without that Permission some things will not work.</string>
    <string name="permissionStorageTitle">Storage Permission</string>
    <string name="prayerNotification">Prayer Notification</string>
    <string name="refresh">Synchronize</string>
    <string name="resetConfirmDhikr">Do you really want to reset\“%1$s\”?</string>
    <string name="restore">Restore</string>
    <string name="search">Search</string>
    <string name="selectOther">Other…</string>
    <string name="mail">E-Mail</string>
    <string name="sendMail">Send E-Mail</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="shareTimes">Today\'s Prayertimes for %1$s</string>
    <string name="showMore">Show more</string>
    <string name="silenterDuration">Silenter duration</string>
    <string name="silenterType">Silent Mode</string>
    <string name="silent">Silent</string>
    <string name="sorted">Sorted</string>
    <string name="soundPicker">Sound Picker</string>
    <string name="sound">Sound</string>
    <string name="sun">Sun</string>
    <string name="switchCompass">Compass/Map</string>
    <string name="tasbih">Tasbih</string>
    <string name="tesbihat">Tasbeehat</string>
    <string name="timeBased">Minutes</string>
    <string name="time">Time</string>
    <string name="touchToSelectCity">Touch here to select City</string>
    <string name="transWhiteWidget">Transparent White Widget</string>
    <string name="transWidget">Transparent Widget</string>
    <string name="test">Try</string>
    <string name="use12h">Use 12 Hours Format</string>
    <string name="useArabicNames">Use Arabic Prayertimes</string>
    <string name="useSilenter">Silent</string>
    <string name="useVibration">Vibration</string>
    <string name="version">Version</string>
    <string name="vibrationDesc">Miliseconds - wait vibrate wait…</string>
    <string name="vibrationPattern">Vibration pattern</string>
    <string name="volumeAlarm">Alarm-Volume</string>
    <string name="volumeMedia">Media-Volume</string>
    <string name="volumeRingtone">Ringtone-Volume</string>
    <string name="vote">Vote</string>
    <string name="whiteWidget">White Widget</string>
    <string name="widgetClock">Prayer Times - 4*2 Clock</string>
    <string name="widgetCountdownType">Widget - Countdown Minutes</string>
    <string name="widgetDesign">Theme</string>
    <string name="widgetLong">Prayer Times - 4*1 Widget</string>
    <string name="widgetLabel">Prayer Times - 2*2 Widget</string>
    <string name="widgetSilenter">Prayer Times - Silenter Widget</string>
    <string name="widgetSmall">Prayer Times - 1*1 Widget</string>
    <string name="witr">Witr</string>
    <string name="yes">Yes</string>
    <string name="zoomIn">Zoom In</string>
    <string name="zoomOut">Zoom out</string>
    <string name="zuhr">Zuhr</string>
    <string name="calculated">Calculated</string>
    <string name="beta_tester">Become a tester</string>
    <string name="widgetClock2">Prayer Times - 2*2 Clock</string>
    <string name="numbers">Digits</string>
    <string name="dateFormat3">31 December </string>
    <string name="hDateFormat3">30 Muharram </string>
    <string name="useAlarm">Use Alarm for Notification</string>
    <string name="useAlarmDesc">EXPERIMENTAL - If Notifications are not triggered in time, you can try this Setting. An
        alarm clock icon will be added to the Status bar!
    </string>
    <string name="ongoingNumber">Show minutes in Notification-Icon</string>
    <string name="vakit_indicator">Prayertime indicator</string>
    <string name="vakit_indicator_next">Next prayertime</string>
    <string name="vakit_indicator_current">Current prayertime</string>
    <string name="show_notification_screen">Show Notification Screen</string>
    <string name="autoremove_notification">Remove Notification after Adhan</string>
    <string name="about">About</string>
    <string name="report_bug">Report bug</string>
    <string name="report_bug_sum">Report bug or request new features.</string>
    <string name="translate">Translate</string>
    <string name="translate_sum">Help us to translate this App in more Languages</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="github_sum">Fork the repo and push changes or submit new issues.</string>
    <string name="license">License</string>
    <string name="license_sum">Check Apache License, Version 2.0 license terms used on Prayer times</string>
    <string name="library_licenses">Library Licenses</string>
    <string name="library_licenses_sum">Check third-party libs used in Prayer times</string>
    <string name="rate">Rate</string>
    <string name="rate_desc">Leave us positive rating if you like Prayer times.</string>
    <string name="sendMail_sum">Send me an E-Mail!</string>
    <string name="beta_tester_desc">Register as Beta Tester by clicking here</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="export">Export</string>
    <string name="versionNotSupported">Your Android Version does not support this!</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="permissionNotGranted">Permission not granted.</string>
    <string name="addFromCSV">Add from CSV</string>
    <string name="csvFromFile">Load CSV from File</string>
    <string name="csvFromURL">Load CSV from URL</string>
    <string name="stopFacedown">Stop Sound by turning the screen face down.</string>
    <string name="ratingFirstDlgTitle">Do you like this app?</string>
    <string name="ratingPositiveTitle">Rate this app!</string>
    <string name="ratingPositiveText">If you like this app, take a moment to vote it in the Play Store.</string>
    <string name="ratingNegativeTitle">Write Feedback!</string>
    <string name="ratingNegativeText">Write me an E-Mail with your feelings, impressions and suggestions for this app and help me improving it continuously!</string>
    <string name="notnow">Not Now</string>
    <string name="totheplaystore">Take me to the Play Store</string>
    <string name="widget_current_vakit">Widget - Alternative Current Time indicator</string>
    <string name="support_development">Support Development</string>
    <string name="widget">Widget</string>
    <string name="showLegacyWidgets">Show legacy Widgets</string>
    <string name="showLegacyWidgetsSummary">Only use if you have problems with your Widgets</string>
    <string name="pleaseDeleteAndReadd">Please delete this City and re-add it.</string>
    <string name="asrSani" translatable="false">Asr Sânî</string>
    <string name="showExtraTimes">Show Morning Prayer and Asr Sani</string>
    <string name="showExtraTimesSummary">Only for FaziletTakvimi.com, NamazVakti.com and Calculated</string>
    <string name="noAdjustment">No adjustments</string>
    <string name="customCalc">Custom</string>
    <string name="customCalcDesc">Set custom calculation parameters</string>
    <string name="systemLang">System language</string>
    <string name="showIntro">Show Intro</string>
    <string name="continue_">Continue</string>
    <string name="back">Back</string>
    <string name="finish">Done</string>
    <string name="shareText">Hey, check out this prayer times app: https://play.google.com/store/apps/details?id=com.metinkale.prayer</string>
    <string name="share_sum">Share this app with others!</string>
    <string name="showIntro_sum">Show the Introductions of this App</string>
    <string name="intro_menu">Through the Drawer Menu you can access all Features of this App</string>
    <string name="intro_pager">You can add as many cities as you want</string>
    <string name="intro_config">By swiping up/down you can access to monthly view and the city settings.</string>
    <string name="intro_config2">By pressing the Alarm Icon in the menu you can access the notification settigs to configure Adhan.</string>
    <string name="autoLocation">Auto Location</string>
    <string name="stop">Stop</string>
    <string name="secret_google_maps_api_key">AIzaSyDY572OP0ICcZC7M8gcBOVWByypgymP_f4</string>
    <string name="io_fabric_api_key">07d248c4082b57df00b2486c17f85f5aba5ae17a</string>
    <string name="kaaba">Kaaba</string>
    <string name="current_location">Current location</string>
    <string name="label_compass_orientation">This feature uses the compass in your phone to point you in the correct direction. The compass can be unreliable indoors so if the results look incorrect, we recommend orienting your phones compass by performing the following steps.</string>
    <string name="label_dont_show_again">Don\'t show again</string>
    <string name="title_compass_orientation">Compass orientation</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="button_prev">\u2190 Previous</string>
    <string name="button_next">Next \u2192</string>
    <string name="button_done">Done</string>
    <string name="button_alarm_on">Turn on alarm \u2192</string>
    <string name="button_alarm_off">Turn off alarm \u2192</string>
    <string name="arrow_back_button">Arrow Back Button</string>
    <string name="arrow_farword_button">Arrow Farword Button</string>
    <string name="gotoAyah">Go to Ayah</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="play_sound">Play Sound</string>
    <string name="stop_sound">Stop Sound</string>
    <string name="pause_sound">Pause Sound</string>
    <string name="night_reading_on">Night Reading Mode On</string>
    <string name="night_reading_off">Night Reading Mode Off</string>
    <string name="word_meaning_on">Word Meaning On</string>
    <string name="word_meaning_off">Word Meaning Off</string>
    <string name="gotoPage">Go To Page</string>
    <string name="download_audio">Download Audio</string>
    <string name="next_Joza">Next Juz</string>
    <string name="prev_Joza">Previous Juz</string>
</resources>