<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.WeeklyPrayersTimeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFF"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/text_ten"
            android:paddingLeft="@dimen/text_ten"
            android:paddingRight="@dimen/space_ten"
            android:paddingEnd="@dimen/space_ten">

            <ImageButton
                android:id="@+id/table_previews_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/arrow_back_button"
                android:background="@drawable/preference_pressed"
                android:padding="@dimen/space_five"
                app:srcCompat="@drawable/navigate_back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/table_main_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pro_display_regular"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/table_second_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pro_display_regular"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/textColorSecondary" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/table_next_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/arrow_farword_button"
                android:background="@drawable/preference_pressed"
                android:padding="@dimen/space_five"
                app:srcCompat="@drawable/naivgate_forward" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textColor="@color/textColorSecondary"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fajr"
            android:fontFamily="@font/pro_display_regular"
            android:textColor="@color/textColorSecondary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/TextView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dhuhr"
            android:fontFamily="@font/pro_display_regular"
            android:textColor="@color/textColorSecondary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/asr"
            android:fontFamily="@font/pro_display_regular"
            android:textColor="@color/textColorSecondary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/maghrib"
            android:fontFamily="@font/pro_display_regular"
            android:textColor="@color/textColorSecondary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/isha"
            android:fontFamily="@font/pro_display_regular"
            android:textColor="@color/textColorSecondary"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ListView
        android:id="@+id/table_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<FrameLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2dp"-->
                <!--android:background="@color/divider" />-->

            <LinearLayout
                android:id="@+id/week"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="gone" />

            <TableLayout
                android:id="@+id/tablep7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
